judge_run_in_docker ，TODO 尝试使用C++，TODO在用户态存储信息MAP

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "files.associations": {
-        "sstream": "c"
+        "sstream": "c",
+        "atomic": "c",
+        "*.tcc": "c",
+        "fstream": "c"
     }
 }
