--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
         "atomic": "c",
         "*.tcc": "c",
         "fstream": "c",
-        "functional": "c"
+        "functional": "c",
+        "typeinfo": "c",
+        "string_view": "c"
     }
 }
